server/css/honeysens.css
/* Common styles */
.clear {clear: both}
.nooverflow {overflow: hidden}

/* Set global height */
html, body {height: 100%}

/* Hide the up/down spinner of number input fields */
input[type=number] {-moz-appearance: textfield}
​::-webkit-inner-spin-button { -webkit-appearance: none}
​::-webkit-outer-spin-button { -webkit-appearance: none}

/* Disable ugly outlines and replace them with hover states for accessibility */
a, a:active, a:focus, a.btn:active, a.btn:focus, a.btn:active:focus, button, button.btn:active, button.btn:focus, button.btn:active:focus,
.btn:active, .btn:focus, .btn.active:focus {
    outline: 0;
}

/* Fix forms in popovers within a DataTable */
table.table div.popover div.form-group {display: block; margin-bottom: 15px}
table.table div.popover .form-control {display: block; width: 100%}

/* Increase max popover width */
div.popover {max-width: 450px}

/* Fieldset indentation within modals */
#modal fieldset {padding: 0.35em 1em 0.75em}

/* Position containers holding transition regions relative, because their children have set position: 'absolute' */
div.transitionContainer {position: relative}

div.transitionView {position: absolute; left: 0; right: 0}

/* Distinguish toggle buttons in panel headings by color */
div.panel-heading button.btn-primary {background: #d9230f none}
div.panel-heading button.btn-primary.active {background: #469408 none}

/* Panel lead icons */
div.panelIcon {font-size: 2.3em; margin-right: .4em}

/* Overlay regions */
#overlay > div.container-fluid {
    position: fixed;
    top: 40px;
    left: 0;
    right: 0;
    bottom: 0;
    display: none;
    z-index: 11;
    overflow-y: auto;
    padding-top: 20px;
    background-color: #fff;
    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5);
    border: 1px solid rgba(0, 0, 0, 0.2);
}
#overlay h1.page-header:first-of-type {margin-top: 0}
#overlay > div.overlay-backdrop {
    position: fixed;
    top: 40px;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #000;
    opacity: 0;
    transition: opacity 0.15s linear;
    z-index: 10;
}
#overlay > div.overlay-backdrop.active {opacity: 0.5;}

/* Fix forms within tables */
table td form.form-horizontal div.form-group {margin: 0;}

/* Align horizontal description list labels to the left if required */
dl.dl-horizontal.label-left dt {text-align: left;}

/* Chart.js HTML legends */
div.chart-legend ul {list-style: none; padding-left: .5em}
div.chart-legend li span {display: inline-block; width: 12px; height: 12px; margin-right: 5px}

/* Backgrid integration */
table.table th.sortable a {display: block; cursor: pointer; color: inherit; text-decoration: none}
table.table th.sortable {background: url('../images/sort_both.png') no-repeat center right}
table.table th.sortable.ascending {background: url('../images/sort_asc.png') no-repeat center right}
table.table th.sortable.descending {background: url('../images/sort_desc.png') no-repeat center right}
/* Backgrid paginator styling to match bootstrap theme */
div.backgrid-paginator > ul {margin: 0; padding-right: 20px}
div.backgrid-paginator > ul > li > a {border: 1px solid #ddd; height: auto; margin-left: -1px}
div.backgrid-paginator > ul > li:first-child > a {border-top-left-radius: 4px; border-bottom-left-radius: 4px; margin: 0}
div.backgrid-paginator > ul > li:last-child > a {border-top-right-radius: 4px; border-bottom-right-radius: 4px}
/* Backgrid filters above tables */
div.filters div.form-group:not(.pull-right) {margin-right: 1em}
/* Backgrid search filter */
.backgrid-filter .search {position: relative; left: 12px; z-index: 1000; -webkit-box-sizing: content-box; -moz-box-sizing: content-box; box-sizing: content-box}
.backgrid-filter .search:before {position: absolute; top: 50%; left: 0; width: 6px; height: 6px; margin-top: -6px; background: transparent; border: 3px solid gray; -webkit-border-radius: 12px; -moz-border-radius: 12px; border-radius: 12px; content: ""; -webkit-box-sizing: content-box; -moz-box-sizing: content-box; box-sizing: content-box}
.backgrid-filter .search:after {position: absolute; top: 50%; left: 10px; width: 3px; height: 7px; margin-top: 2px; background-color: gray; content: ""; -webkit-transform: rotate(-45deg); -moz-transform: rotate(-45deg); -ms-transform: rotate(-45deg); -o-transform: rotate(-45deg); transform: rotate(-45deg); -webkit-box-sizing: content-box; -moz-box-sizing: content-box; box-sizing: content-box}
.backgrid-filter .clear {position: relative; top: 2px; right: 25px; z-index: 1000; font-family: sans-serif; font-size: 20px; font-weight: bold; color: gray; text-decoration: none}
.backgrid-filter input {padding-left: 30px}
/* Backgrid select-all extension styling */
table.table .select-row-cell, table.table .select-all-header-cell {text-align: center}
table.table tr.selected td {background-color: #dff0d8}
/* Backgrid subgrids */
.backgrid .subgrid-cell {
    font-weight: bold;
    font-family: "Courier New", Courier, monospace;
    text-align: center;
    outline: 0;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -o-user-select: none;
    user-select: none;
}
tr.backgrid-subgrid-row td[colspan] {padding: 0}
tr.backgrid-subgrid-row table tbody tr:first-child td {border-top: 0}
tr.backgrid-subgrid-row table thead {visibility: collapse}
div.revisions table thead th:first-child {width: 50px}
div.revisions table thead th:nth-child(2) {width: 15%}
div.revisions table thead th:nth-child(4) {width: 15%}
div.revisions table thead th:nth-child(4) {width: 20%}
div.revisions table thead th:nth-child(5) {width: 10%}
/* Rotated table headers */
table.table th.rotated {white-space: nowrap; border: none; width: 20px}
table.table th.rotated div {transform: rotate(315deg) translate(7px, 0px); width: 20px}

/* Buttons within panel headings need to be very small to fit */
div.panel-heading button.btn-xs {font-size: 10px; text-transform: uppercase}

body {padding-top: 50px}

/* Navbar donut menu */
button.navbar-toggle .icon-bar {background-color: #444}
#navbar-top ul.nav {display: block}
#navbar-top ul.nav ul li a {padding-left: 2.5em}

/* Navbar contents */
nav.navbar {background-color: #f5f5f5; border-top: 3px solid #d9230f}
nav.navbar a.navbar-brand {color: #d9230f; padding-left: 0 !important}
nav.navbar a.navbar-brand > img {display: inline; width: 47px}
div.navbar-header a.navbar-brand {padding: 10px}
div.navbar-right {margin-right: 0}

#navbar-top p.navbar-text {display: inline-block}

#navbar-top div#counter {width: 12px; height: 12px; margin-top: 14px; display: inline-block !important}

/* Sidebar styling */
div.sidebar {display: none; overflow: auto}
div.sidebar > div {display: table; height: 100%}
div.sidebar-content, div.sidebar-footer {display: table-row}
div.sidebar li.active > a {background-color: #d9230f; color: #fff}
div.sidebar p.buildNumber {color: #d9230f; font-size: 0.9em; padding: 10px 0; display: table-cell; vertical-align: bottom; text-align: center; width: 45px}
div.sidebar ul.nav-sidebar li {overflow: hidden; width: 45px; transition: width 0.3s}
div.sidebar div.expanded ul.nav-sidebar li {width: 14em; transition: width 0.3s}
div.sidebar ul.nav-sidebar li a {width: 14em}
div.sidebar span.menuLabel {opacity: 0}
div.sidebar div.expanded span.menuLabel {opacity: 1; transition: opacity 0.5s}
div.sidebar div.expanded ul.nav ul li a {padding-left: 2.5em; transition: padding-left 0.5s}

div.main {padding: 10px 10px 0}
div.main h1.page-header:first-of-type {margin-top: 0}

h1.page-header span.glyphicon {font-size: .7em}

div.main div.well h3 {margin-top: 0}

/* Header bar for placing buttons next to some title text.
   Enforces a correct margin during transitions. */
div.content div.row:first-of-type div.headerBar h3, div.content div.row.transitionView div.headerBar h3 {margin-top: 0}

/* Force buttons in header bars in front of other stuff.
   Ensures that the click events can't be overtaken by other elements (e.g. forms) */
div.content div.headerBar div.pull-right button {position: relative; z-index: 1}

/* The loading page is displayed while the JS application loads */
div#loading {background-color: #eee; position: absolute; top: 0; bottom: 0; left: 0; right: 0}

div#loading img {margin: 4.4em auto 0 auto}

/* Login form */
form.loginForm {margin: 0 auto; max-width: 284px}
form.loginForm img {padding-bottom: 2em}
form.loginForm .form-control {font-size: 1.2em; height: auto; padding: 10px}
form.loginForm input[type="password"] {margin-bottom: 1em}
form.loginForm div.alert {text-align: center}

/* Dashboard */
#dashboard div.row-timeline {margin-left: 0; margin-right: 0}
#dashboard div.row-timeline div.col-sm-12 {padding-left: 0; padding-right: 0}
div.dashboard form.filters {margin-bottom: 1em}

div.certData textarea {height: 15em; font-size: 80%}

/* FIXME remove? */
a.dlConfig, a.dlImage {margin-bottom: 1em}

div.loading {position: relative; width: 25px; height: 3em}
div.loadingInline {position: relative; width: 25px; height: 1.3em}

span.counting {line-height: 3.7em}

div.main table tr td {-moz-transition: 1s; -webkit-transition: 1s; -ms-transition: 1s; transition: 1s}

div.emailSettings div.checkbox {margin-right: 2em}

/* Service registry status indicator */
span.registryOnline {color: #468847; font-weight: bold}
span.registryOffline {color: #b94a48; font-weight: bold}

/* Firmware upload dialog */
#modal-firmware-upload div.progress, #modal-addimage div.progress-text {margin-top: 7px}
#modal-firmware-upload div.imageVerify span.glyphicon-ok {color: #5cb85c}
#modal-firmware-upload div.imageVerify span.glyphicon-remove {color: #d9534f}
#modal-firmware-upload div.alert {text-align: center}

/* Supports transitions within the add sensor overlay */
div.addForm, div.addBusy, div.addResult {top: 0; transition: top 400ms linear 0s; position: relative}

/* Event list options box (for selected events) */
div.selectionOptions {border: 1px solid #ddd; border-radius: 4px; padding: 0 8px; line-height: 30px; background-color: #dff0d8}
div.selectionOptions button.btn {vertical-align: baseline}

/* Remove white space around tables in the event details overlay (for better integration into the accordion) */
#detailLists {margin-bottom: 0}
#detailLists div.panel-body {padding: 0}
#detailLists div.table-responsive, #detailLists table {margin-bottom: 0}

@media (min-width: 768px) {
	div.sidebar {
		display: block;
		background-color: #f5f5f5;
		padding: 20px 0 0 0;
		position: fixed;
		left: 0;
		bottom: 0;
		top: 41px;
		z-index: 1000;
		overflow-y: auto;
	}

	#navbar-top ul.nav {display: none}
	
	div.main {padding: 10px 20px 0 70px}
}

